namespaces/live.cloud-platform.service.justice.gov.uk/calculate-release-dates-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: calculate-release-dates-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "calculate_release_dates"
    cloud-platform.justice.gov.uk/slack-alert-channel: "calculate_release_dates"
    cloud-platform.justice.gov.uk/application: "Calculate release dates"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services (CRD): calculatereleasedatesdevelopers@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/calculate-release-dates.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
